apps/bss-web/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bss-web
  namespace: apps
  labels:
    app: bss-web
spec:
  selector:
    matchLabels:
      app: bss-web
  template:
    metadata:
#      annotations:
#        prometheus.io/scrape: "true"
      labels:
        app: bss-web
    spec:
      containers:
        - name: bss-web
          image: ghcr.io/ttretau/blind-song-scanner:fix-play
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
