apps/bss-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bss-web-service
  namespace: apps
spec:
  selector:
    app: bss-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
